# rust-forms

./: .gitignore  README.md
api/: Cargo.toml
api/migrations/2022-11-29-102906_create_users/: up.sql
api/migrations/2022-12-18-163306_create_forms/: down.sql  up.sql
api/src/: config.rs  errors.rs  main.rs  rejections.rs  replies.rs  utils.rs
api/src/database/: actions.rs  mod.rs  models.rs  schema.rs
api/src/database/actions/: form.rs  mod.rs  user.rs
api/src/database/models/: user.rs
api/src/filters/: app_data.rs  errors.rs  mod.rs  with.rs
api/src/models/: mod.rs  schema.rs
api/src/models/database/: form.rs  user.rs
api/src/models/json/: auth.rs  form.rs  mod.rs  user.rs
api/src/routes/: mod.rs
api/src/routes/auth/: auth.rs
api/src/routes/collector/: collector.rs
api/src/routes/forms/: forms.rs
api/src/utils/: argon2.rs  forms.rs  jwt.rs  mod.rs
scripts/: hash_generator.bash
web/: package-lock.json  package.json
web/src/lib/: config.ts  store.ts
web/src/lib/components/: AuthGuard.svelte  Header.svelte
web/src/routes/: +layout.svelte  +layout.ts
