[package]
name = "rust-forms-api"
version = "1.0.0"
edition = "2021"

[dev-dependencies]
cargo-watch = "8.1.2"

[dependencies]
tokio = {version = "1", features = ["full"] }
warp = "0.3"
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.4"
diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2", "uuid"] }
chrono = "^0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "^0.16"
